# random

cpp-exercises/: CMakeLists.txt  progress.sh
cpp-exercises/module_01_data_structures/: CMakeLists.txt  ex01_linked_list.cpp  ex02_stack.cpp  ex03_ring_buffer.cpp  ex04_hash_map.cpp  ex05_lru_cache.cpp
cpp-exercises/module_02_threads/: CMakeLists.txt  ex01_data_race.cpp  ex02_deadlock.cpp  ex03_condition_var.cpp  ex04_atomics.cpp  ex05_rwlock.cpp
cpp-exercises/module_03_concurrency_patterns/: CMakeLists.txt  ex01_bounded_queue.cpp  ex02_semaphore.cpp  ex03_barrier.cpp  ex04_thread_pool.cpp  ex05_pipeline.cpp
cpp-exercises/module_04_io_caching/: CMakeLists.txt  ex01_buffered_writer.cpp  ex02_line_reader.cpp  ex03_write_through_cache.cpp  ex04_lru_cache_threadsafe.cpp  ex05_io_system.cpp
cuda-exercises/: CMakeLists.txt  progress.sh
cuda-exercises/module_01_memory/: CMakeLists.txt  ex01_vector_add.cu  ex02_missing_guard.cu  ex03_shared_sync.cu  ex04_atomic_counter.cu  ex05_unified_sync.cu
cuda-exercises/module_02_parallel_patterns/: CMakeLists.txt  ex01_reduction.cu  ex02_histogram.cu  ex03_prefix_scan.cu  ex04_stencil.cu  ex05_dot_product.cu
cuda-exercises/module_03_streams/: CMakeLists.txt  ex01_async_result.cu  ex02_event_timing.cu  ex03_stream_dependency.cu  ex04_double_buffer.cu  ex05_multi_stream_sync.cu
cuda-exercises/module_04_warp_optimization/: CMakeLists.txt  ex01_transpose.cu  ex02_tiled_matmul.cu  ex03_warp_reduce.cu  ex04_grid_stride.cu  ex05_warp_sync.cu
rust-exercises/: Cargo.toml  progress.sh
rust-exercises/module_01_greeter/: Cargo.toml
rust-exercises/module_02_guesser/: Cargo.toml
rust-exercises/module_03_ownership/: Cargo.toml
rust-exercises/module_04_borrowing/: Cargo.toml
rust-exercises/module_05_todos/: Cargo.toml
rust-exercises/module_06_frequencies/: Cargo.toml
rust-exercises/module_07_creatures/: Cargo.toml
rust-exercises/module_08_robust/: Cargo.toml
rust-exercises/module_09_lifetimes/: Cargo.toml
rust-exercises/module_10_zero_copy/: Cargo.toml
rust-exercises/module_11_macros/: Cargo.toml
spotify-navidrome/: .gitignore  playlist_import.py
