[package]
name = "module_04_borrowing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex01_dangling"
path = "src/bin/ex01_dangling.rs"

[[bin]]
name = "ex02_double_mut"
path = "src/bin/ex02_double_mut.rs"

[[bin]]
name = "ex03_mut_immut_conflict"
path = "src/bin/ex03_mut_immut_conflict.rs"

[[bin]]
name = "ex04_move_borrowed"
path = "src/bin/ex04_move_borrowed.rs"

[[bin]]
name = "ex05_mut_self"
path = "src/bin/ex05_mut_self.rs"

[[bin]]
name = "ex06_str_vs_string"
path = "src/bin/ex06_str_vs_string.rs"

[[bin]]
name = "ex07_slice_signature"
path = "src/bin/ex07_slice_signature.rs"

[[bin]]
name = "ex08_final"
path = "src/bin/ex08_final.rs"
